--- a/index.html
+++ b/index.html
@@ -11,25 +11,15 @@
 <body>
     <header>
         <nav>
-            <div class="logo">
-                <a href="index.html"><img src="res/logo.png" alt="Pascal's Triangle"></a>
-            </div>
+            <a href='index.html'><img src="res/logo.png" class="logo"></a>
             
             <div class="lang-menu">
                 <div class="selected-lang" id="selected-lang">English</div>
                 <ul>
-                    <li>
-                        <a href="#" onclick="setLanguage('en')" class="en">English</a>
-                    </li>
-                    <li>
-                        <a href="#" onclick="setLanguage('tr')" class="tr">Türkçe</a>
-                    </li>
-                    <li>
-                        <a href="#" onclick="setLanguage('de')" class="de">Deutsch</a>
-                    </li>
-                    <li>
-                        <a href="#" onclick="setLanguage('ru')" class="ru">Русский</a>
-                    </li>
+                    <li><a href="#" onclick="setLanguage('en')" class="en">English</a></li>
+                    <li><a href="#" onclick="setLanguage('tr')" class="tr">Türkçe</a></li>
+                    <li><a href="#" onclick="setLanguage('de')" class="de">Deutsch</a></li>
+                    <li><a href="#" onclick="setLanguage('ru')" class="ru">Русский</a></li>
                 </ul>
             </div>
         </nav>
