--- a/history.html
+++ b/history.html
@@ -16,11 +16,11 @@
                 <ul>
                     <li><a href="history.html" id="navbar-history">History</a></li>
                     <li><a href="modelling.html" id="navbar-modelling">Modelling</a></li>
-                    <li><a href="#" id="">Lorem</a></li>
-                    <li><a href="#" id="">Ipsum</a></li>
-                    <li><a href="#" id="">Dolor</a></li>
-                    <li><a href="#" id="">Sit</a></li>
-                    <li><a href="#" id="">Amet</a></li>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Ipsum</a></li>
+                    <li><a href="#">Dolor</a></li>
+                    <li><a href="#">Sit</a></li>
+                    <li><a href="#">Amet</a></li>
                 </ul>
             </div>
             
