--- a/history.html
+++ b/history.html
@@ -37,7 +37,7 @@
     </header>
 
     <div class="paragraph">
-        <p>
+        <p id="history-paragraph">
             <br>The pattern of numbers that forms Pascal's triangle was known well before Pascal's time. The Persian mathematician <em>Al-Karaji</em> (953-1029) wrote a now-lost book which contained the first formulation of the binomial coefficients and the first description of Pascal's triangle. It was later repeated by <em>Omar Khayyám</em> (1048-1131), another Persian mathematician; thus the triangle is also referred to as <i>Khayyam's triangle (مثلث خیام)</i> in Iran. Several theorems related to the triangle were known, including the binomial theorem. Khayyam used a method of finding nth roots based on the binomial expansion, and therefore on the binomial coefficients.
             <br>
             <br>Pascal's triangle was known in China during the early 11th century through the work of the Chinese mathematician <em>Jia Xian</em> (1010-1070). During the 13th century, <em>Yang Hui</em> (1238-1298) defined the triangle, and it is known as <i>Yang Hui's triangle (杨辉三角; 楊輝三角)</i> in China.
