--- a/history.html
+++ b/history.html
@@ -10,30 +10,28 @@
 
 <body>
     <header>
-        <nav>
-            <a href='index.html'><img src="res/logo.png" class="logo"></a>
-            <div class="navbar">
-                <ul>
-                    <li><a href="history.html" id="navbar-history">History</a></li>
-                    <li><a href="modelling.html" id="navbar-modelling">Modelling</a></li>
-                    <li><a href="#">Lorem</a></li>
-                    <li><a href="#">Ipsum</a></li>
-                    <li><a href="#">Dolor</a></li>
-                    <li><a href="#">Sit</a></li>
-                    <li><a href="#">Amet</a></li>
-                </ul>
-            </div>
-            
-            <div class="lang-menu">
-                <div class="selected-lang" id="selected-lang">English</div>
-                <ul>
-                    <li><a href="#" onclick="setLanguage('en')" class="en">English</a></li>
-                    <li><a href="#" onclick="setLanguage('tr')" class="tr">Türkçe</a></li>
-                    <li><a href="#" onclick="setLanguage('de')" class="de">Deutsch</a></li>
-                    <li><a href="#" onclick="setLanguage('ru')" class="ru">Русский</a></li>
-                </ul>
-            </div>
-        </nav>
+        <a href='index.html'><img src="res/logo.png" class="logo"></a>
+        <div class="navbar">
+            <ul>
+                <li><a href="history.html" id="navbar-history" style="color:aqua; text-decoration: underline;">History</a></li>
+                <li><a href="modelling.html" id="navbar-modelling">Modelling</a></li>
+                <li><a href="#" id="">Lorem</a></li>
+                <li><a href="#" id="">Ipsum</a></li>
+                <li><a href="#" id="">Dolor</a></li>
+                <li><a href="#" id="">Sit</a></li>
+                <li><a href="#" id="">Amet</a></li>
+            </ul>
+        </div>
+
+        <div class="lang-menu">
+            <div class="selected-lang" id="selected-lang">English</div>
+            <ul>
+                <li><a href="#" onclick="setLanguage('en')" class="en">English</a></li>
+                <li><a href="#" onclick="setLanguage('tr')" class="tr">Türkçe</a></li>
+                <li><a href="#" onclick="setLanguage('de')" class="de">Deutsch</a></li>
+                <li><a href="#" onclick="setLanguage('ru')" class="ru">Русский</a></li>
+            </ul>
+        </div>
     </header>
 
     <div class="paragraph">
@@ -46,7 +44,7 @@
             <br>
             <br><em>Blaise Pascal</em>'s (1623-1662) <em>Traité du triangle arithmétique</em> (Treatise on Arithmetical Triangle) was published posthumously in 1665. In this, Pascal collected several results then known about the triangle, and employed them to solve problems in probability theory. The triangle was later named for Pascal by <em>Pierre Raymond de Montmort</em> (1708) who called it <em>table de M. Pascal pour les combinaisons</em> (French: Mr. Pascal's table for combinations) <em>and Abraham de Moivre</em> (1730) who called it <em>Triangulum Arithmeticum PASCALIANUM</em> (Latin: Pascal's Arithmetic Triangle), which became the basis of the modern Western name, <i>Pascal's triangle</i>.
             <br>
-            <br><a class="source" id="source">Source: <a href="https://en.wikipedia.org/wiki/Pascal%27s_triangle#History" target="_blank" rel="noopener noreferrer">https://en.wikipedia.org/wiki/Pascal%27s_triangle#History</a></a>
+            <br><a class="source">Source: <a href="https://en.wikipedia.org/wiki/Pascal%27s_triangle#History" target="_blank" rel="noopener noreferrer">https://en.wikipedia.org/wiki/Pascal%27s_triangle#History</a></a>
         </p>
     </div>
 
