--- a/modelling.html
+++ b/modelling.html
@@ -10,30 +10,28 @@
 
 <body>
     <header>
-        <nav>
-            <a href='index.html'><img src="res/logo.png" class="logo"></a>
-            <div class="navbar">
-                <ul>
-                    <li><a href="history.html" id="navbar-history">History</a></li>
-                    <li><a href="modelling.html" id="navbar-modelling">Modelling</a></li>
-                    <li><a href="#">Lorem</a></li>
-                    <li><a href="#">Ipsum</a></li>
-                    <li><a href="#">Dolor</a></li>
-                    <li><a href="#">Sit</a></li>
-                    <li><a href="#">Amet</a></li>
-                </ul>
-            </div>
-            
-            <div class="lang-menu">
-                <div class="selected-lang" id="selected-lang">English</div>
-                <ul>
-                    <li><a href="#" onclick="setLanguage('en')" class="en">English</a></li>
-                    <li><a href="#" onclick="setLanguage('tr')" class="tr">Türkçe</a></li>
-                    <li><a href="#" onclick="setLanguage('de')" class="de">Deutsch</a></li>
-                    <li><a href="#" onclick="setLanguage('ru')" class="ru">Русский</a></li>
-                </ul>
-            </div>
-        </nav>
+        <a href='index.html'><img src="res/logo.png" class="logo"></a>
+        <div class="navbar">
+            <ul>
+                <li><a href="history.html" id="navbar-history">History</a></li>
+                <li><a href="modelling.html" id="navbar-modelling" style="color:aqua; text-decoration: underline;">Modelling</a></li>
+                <li><a href="#" id="">Lorem</a></li>
+                <li><a href="#" id="">Ipsum</a></li>
+                <li><a href="#" id="">Dolor</a></li>
+                <li><a href="#" id="">Sit</a></li>
+                <li><a href="#" id="">Amet</a></li>
+            </ul>
+        </div>
+
+        <div class="lang-menu">
+            <div class="selected-lang" id="selected-lang">English</div>
+            <ul>
+                <li><a href="#" onclick="setLanguage('en')" class="en">English</a></li>
+                <li><a href="#" onclick="setLanguage('tr')" class="tr">Türkçe</a></li>
+                <li><a href="#" onclick="setLanguage('de')" class="de">Deutsch</a></li>
+                <li><a href="#" onclick="setLanguage('ru')" class="ru">Русский</a></li>
+            </ul>
+        </div>
     </header>
 
     <script src="app.js"></script>
