--- a/history.html
+++ b/history.html
@@ -9,44 +9,55 @@
 </head>
 
 <body>
-    <header>
-        <a href='index.html'><img src="res/logo.png" class="logo"></a>
-        <div class="navbar">
-            <ul>
-                <li><a href="history.html" id="navbar-history" style="color:aqua; text-decoration: underline;">History</a></li>
-                <li><a href="modelling.html" id="navbar-modelling">Modelling</a></li>
-                <li><a href="#" id="">Lorem</a></li>
-                <li><a href="#" id="">Ipsum</a></li>
-                <li><a href="#" id="">Dolor</a></li>
-                <li><a href="#" id="">Sit</a></li>
-                <li><a href="#" id="">Amet</a></li>
-            </ul>
+    <main>
+        <header>
+            <nav>
+                <a href='index.html'><img src="res/logo.png" class="logo"></a>
+                <div class="navbar">
+                    <ul>
+                        <li><a href="history.html" id="navbar-history" style="color:aqua; text-decoration: underline;">History</a></li>
+                        <li><a href="modelling.html" id="navbar-modelling">Modelling</a></li>
+                        <li><a href="#" id="">Lorem</a></li>
+                        <li><a href="#" id="">Ipsum</a></li>
+                        <li><a href="#" id="">Dolor</a></li>
+                        <li><a href="#" id="">Sit</a></li>
+                        <li><a href="#" id="">Amet</a></li>
+                    </ul>
+                </div>
+                
+                <div class="lang-menu">
+                    <div class="selected-lang" id="selected-lang">English</div>
+                    <ul>
+                        <li><a href="#" onclick="setLanguage('en')" class="en">English</a></li>
+                        <li><a href="#" onclick="setLanguage('tr')" class="tr">Türkçe</a></li>
+                        <li><a href="#" onclick="setLanguage('de')" class="de">Deutsch</a></li>
+                        <li><a href="#" onclick="setLanguage('ru')" class="ru">Русский</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+    
+        <div class="paragraph">
+            <p id="history-paragraph">
+                <br>The pattern of numbers that forms Pascal's triangle was known well before Pascal's time. The Persian mathematician <em>Al-Karaji</em> (953-1029) wrote a now-lost book which contained the first formulation of the binomial coefficients and the first description of Pascal's triangle. It was later repeated by <em>Omar Khayyám</em> (1048-1131), another Persian mathematician; thus the triangle is also referred to as <i>Khayyam's triangle (مثلث خیام)</i> in Iran. Several theorems related to the triangle were known, including the binomial theorem. Khayyam used a method of finding nth roots based on the binomial expansion, and therefore on the binomial coefficients.
+                <br>
+                <br>Pascal's triangle was known in China during the early 11th century through the work of the Chinese mathematician <em>Jia Xian</em> (1010-1070). During the 13th century, <em>Yang Hui</em> (1238-1298) defined the triangle, and it is known as <i>Yang Hui's triangle (杨辉三角; 楊輝三角)</i> in China.
+                <br>
+                <br>In Europe, Pascal's triangle appeared for the first time in the <em>Arithmetic of Jordanus de Nemore</em> (13th century). The binomial coefficients were calculated by <em>Gersonides</em> during the early 14th century, using the multiplicative formula for them. <em>Petrus Apianus</em> (1495-1552) published the full triangle on the frontispiece of his book on business calculations in 1527. <em>Michael Stifel</em> published a portion of the triangle (from the second to the middle column in each row) in 1544, describing it as a table of figurate numbers. In Italy, Pascal's triangle is referred to as <i>Tartaglia's triangle</i>, named for the Italian algebraist <em>Tartaglia</em> (1500-1577), who published six rows of the triangle in 1556. <em>Gerolamo Cardano</em> also published the triangle as well as the additive and multiplicative rules for constructing it in 1570.
+                <br>
+                <br><em>Blaise Pascal</em>'s (1623-1662) <em>Traité du triangle arithmétique</em> (Treatise on Arithmetical Triangle) was published posthumously in 1665. In this, Pascal collected several results then known about the triangle, and employed them to solve problems in probability theory. The triangle was later named for Pascal by <em>Pierre Raymond de Montmort</em> (1708) who called it <em>table de M. Pascal pour les combinaisons</em> (French: Mr. Pascal's table for combinations) <em>and Abraham de Moivre</em> (1730) who called it <em>Triangulum Arithmeticum PASCALIANUM</em> (Latin: Pascal's Arithmetic Triangle), which became the basis of the modern Western name, <i>Pascal's triangle</i>.
+                <br>
+                <br><a class="source">Source: <a href="https://en.wikipedia.org/wiki/Pascal%27s_triangle#History" target="_blank" rel="noopener noreferrer">https://en.wikipedia.org/wiki/Pascal%27s_triangle#History</a></a>
+            </p>
         </div>
+    </main>
 
-        <div class="lang-menu">
-            <div class="selected-lang" id="selected-lang">English</div>
-            <ul>
-                <li><a href="#" onclick="setLanguage('en')" class="en">English</a></li>
-                <li><a href="#" onclick="setLanguage('tr')" class="tr">Türkçe</a></li>
-                <li><a href="#" onclick="setLanguage('de')" class="de">Deutsch</a></li>
-                <li><a href="#" onclick="setLanguage('ru')" class="ru">Русский</a></li>
-            </ul>
-        </div>
-    </header>
-
-    <div class="paragraph">
-        <p id="history-paragraph">
-            <br>The pattern of numbers that forms Pascal's triangle was known well before Pascal's time. The Persian mathematician <em>Al-Karaji</em> (953-1029) wrote a now-lost book which contained the first formulation of the binomial coefficients and the first description of Pascal's triangle. It was later repeated by <em>Omar Khayyám</em> (1048-1131), another Persian mathematician; thus the triangle is also referred to as <i>Khayyam's triangle (مثلث خیام)</i> in Iran. Several theorems related to the triangle were known, including the binomial theorem. Khayyam used a method of finding nth roots based on the binomial expansion, and therefore on the binomial coefficients.
-            <br>
-            <br>Pascal's triangle was known in China during the early 11th century through the work of the Chinese mathematician <em>Jia Xian</em> (1010-1070). During the 13th century, <em>Yang Hui</em> (1238-1298) defined the triangle, and it is known as <i>Yang Hui's triangle (杨辉三角; 楊輝三角)</i> in China.
-            <br>
-            <br>In Europe, Pascal's triangle appeared for the first time in the <em>Arithmetic of Jordanus de Nemore</em> (13th century). The binomial coefficients were calculated by <em>Gersonides</em> during the early 14th century, using the multiplicative formula for them. <em>Petrus Apianus</em> (1495-1552) published the full triangle on the frontispiece of his book on business calculations in 1527. <em>Michael Stifel</em> published a portion of the triangle (from the second to the middle column in each row) in 1544, describing it as a table of figurate numbers. In Italy, Pascal's triangle is referred to as <i>Tartaglia's triangle</i>, named for the Italian algebraist <em>Tartaglia</em> (1500-1577), who published six rows of the triangle in 1556. <em>Gerolamo Cardano</em> also published the triangle as well as the additive and multiplicative rules for constructing it in 1570.
-            <br>
-            <br><em>Blaise Pascal</em>'s (1623-1662) <em>Traité du triangle arithmétique</em> (Treatise on Arithmetical Triangle) was published posthumously in 1665. In this, Pascal collected several results then known about the triangle, and employed them to solve problems in probability theory. The triangle was later named for Pascal by <em>Pierre Raymond de Montmort</em> (1708) who called it <em>table de M. Pascal pour les combinaisons</em> (French: Mr. Pascal's table for combinations) <em>and Abraham de Moivre</em> (1730) who called it <em>Triangulum Arithmeticum PASCALIANUM</em> (Latin: Pascal's Arithmetic Triangle), which became the basis of the modern Western name, <i>Pascal's triangle</i>.
-            <br>
-            <br><a class="source">Source: <a href="https://en.wikipedia.org/wiki/Pascal%27s_triangle#History" target="_blank" rel="noopener noreferrer">https://en.wikipedia.org/wiki/Pascal%27s_triangle#History</a></a>
-        </p>
-    </div>
+    <footer>
+        <span><img src="res/icons/mail.png">ismailyigitozmen@gmail.com</span>
+        <span><img src="res/icons/phone.png">+90 530 339 77 09</span>
+        <span><a href="https://github.com/isoyigido" target="_blank" rel="noopener noreferrer"><img src="res/icons/github.png">isoyigido</a></span>
+        <span><a href="https://www.instagram.com/ismailyigitozmen/" target="_blank" rel="noopener noreferrer"><img src="res/icons/instagram.png">ismailyigitozmen</a></span>
+    </footer>
 
     <script src="app.js"></script>
 </body>
