--- a/history.html
+++ b/history.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Pascal's Triangle</title>
+    <link rel="icon" type="image/x-icon" href="res/logo.png">
 </head>
 
 <body>
@@ -18,10 +19,8 @@
                         <li><a href="history.html" id="navbar-history" style="color:aqua; text-decoration: underline;">History</a></li>
                         <li><a href="modelling.html" id="navbar-modelling">Modelling</a></li>
                         <li><a href="#" id="">Lorem</a></li>
+                        <li><a href="quiz.html" id="navbar-quiz">Quiz</a></li>
                         <li><a href="#" id="">Ipsum</a></li>
-                        <li><a href="#" id="">Dolor</a></li>
-                        <li><a href="#" id="">Sit</a></li>
-                        <li><a href="#" id="">Amet</a></li>
                     </ul>
                 </div>
                 
