--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Pascal's Triangle</title>
+    <link rel="icon" type="image/x-icon" href="res/logo.png">
 </head>
 
 <body>
@@ -18,10 +19,8 @@
                         <li><a href="history.html" id="navbar-history">History</a></li>
                         <li><a href="modelling.html" id="navbar-modelling">Modelling</a></li>
                         <li><a href="#" id="">Lorem</a></li>
+                        <li><a href="quiz.html" id="navbar-quiz">Quiz</a></li>
                         <li><a href="#" id="">Ipsum</a></li>
-                        <li><a href="#" id="">Dolor</a></li>
-                        <li><a href="#" id="">Sit</a></li>
-                        <li><a href="#" id="">Amet</a></li>
                     </ul>
                 </div>
                 
@@ -56,6 +55,28 @@
                 <a href="history.html">Learn More</a>
             </div>
             <img src="res/pascal/blaise_pascal.jpg">
+        </div>
+
+        <div class="text-container modelling">
+            <img src="res/pascal/blaise_pascal.jpg">
+            <div class="text">
+                Interactive Model of Pascal's Triangle
+                <p>
+                    <br>Explore Pascal's Triangle through an interactive model. Click through the rows to discover the patterns, coefficients, and relationships hidden within this timeless mathematical structure. Whether you're studying binomial expansions, probability, or combinatorics, this tool will help you visualize and understand the power of Pascal's Triangle in action.<br><br>
+                </p>
+                <a href="modelling.html">Try It Out</a>
+            </div>
+        </div>
+
+        <div class="text-container quiz">
+            <div class="text">
+                Test Your Knowledge!
+                <p>
+                    <br>Think you know everything about Pascal's Triangle? Put your skills to the test with our fun and interactive quiz! Whether you're just starting to explore this mathematical wonder or you're a seasoned expert, there's something here for everyone.<br><br>
+                </p>
+                <a href="quiz.html">Get Started</a>
+            </div>
+            <img src="res/images/quiz.png">
         </div>
     </main>
 
