--- a/quiz.html
+++ b/quiz.html
@@ -17,9 +17,9 @@
                 <div class="navbar">
                     <ul>
                         <li><a href="history.html" id="navbar-history">History</a></li>
-                        <li><a href="modelling.html" id="navbar-modelling" style="color:aqua; text-decoration: underline;">Modelling</a></li>
+                        <li><a href="modelling.html" id="navbar-modelling">Modelling</a></li>
                         <li><a href="#" id="">Lorem</a></li>
-                        <li><a href="quiz.html" id="navbar-quiz">Quiz</a></li>
+                        <li><a href="quiz.html" id="navbar-quiz" style="color:aqua; text-decoration: underline;">Quiz</a></li>
                         <li><a href="#" id="">Ipsum</a></li>
                     </ul>
                 </div>
