--- a/temporary.html
+++ b/temporary.html
@@ -19,8 +19,8 @@
                         <li><a href="history.html" id="navbar-history">History</a></li>
                         <li><a href="modelling.html" id="navbar-modelling">Modelling</a></li>
                         <li><a href="#" id="">Lorem</a></li>
-                        <li><a href="quiz.html" id="navbar-quiz" style="color:aqua; text-decoration: underline;">Quiz</a></li>
-                        <li><a href="temporary.html" id="">...</a></li>
+                        <li><a href="quiz.html" id="navbar-quiz">Quiz</a></li>
+                        <li><a href="temporary.html" style="color:aqua;">...</a></li>
                     </ul>
                 </div>
                 
@@ -35,6 +35,20 @@
                 </div>
             </nav>
         </header>
+
+        <div class="coming-soon">
+            Coming Soon: More Features & Updates!
+            <p>
+                <br>We're constantly working to improve and expand your experience. While you're already enjoying a wealth of interactive tools and resources, we have exciting updates in the works, including:
+                <br>
+                <br>New Visualizations – Explore even more dynamic ways to interact with Pascal's Triangle.
+                <br>Advanced Calculators – More powerful tools to help you dive deeper into mathematical concepts.
+                <br>User-Driven Features – We're listening! Upcoming features based on your feedback.
+                <br>In-Depth Guides & Challenges – New tutorials, quizzes, and challenges to further enhance your learning journey.
+                <br>
+                <br>Stay tuned—there's much more to come!                
+            </p>
+        </div>
     </main>
 
     <footer>
@@ -47,4 +61,4 @@
     <script src="app.js"></script>
 </body>
 
-</html>
+</html
