--- a/modelling.html
+++ b/modelling.html
@@ -20,7 +20,7 @@
                         <li><a href="modelling.html" id="navbar-modelling" style="color:aqua; text-decoration: underline;">Modelling</a></li>
                         <li><a href="#" id="">Lorem</a></li>
                         <li><a href="quiz.html" id="navbar-quiz">Quiz</a></li>
-                        <li><a href="#" id="">Ipsum</a></li>
+                        <li><a href="temporary.html" id="">...</a></li>
                     </ul>
                 </div>
                 
